# fasta-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_wheels.yml
src/: _parser.cpp  _parser.hpp  _parser_bindings.cpp  cli.py
src/fastatools/: main.py
src/pyfastatools/: __init__.py  __init__.pyi  _fastatools.pyi  parser.py  simple.py  utils.py
tests/data/: .coverage  filter.txt  genes.fasta  genome.fasta  protein.fasta  test.map
