[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.2"]
build-backend = "scikit_build_core.build"

[project]

name = "pyfastatools"
version = "2.0.0"
authors = [{ name = "Cody Martin", email = "codycmar10@gmail.com" }]
description = "Simple FASTA file tools to parse, edit, subset, split, and perform stats on FASTA files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++ :: 17",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["more-itertools >= 8.2"]

[project.optional-dependencies]
"cli" = [
    # python version will also have to be updated
    "pydantic>=2,<2.1",
    # also need:
    "pydantic-argparse @ git+https://github.com/cody-mar10/pydantic-argparse.git",
]

[project.scripts]
pyfasta = "pyfastatools:cli.main"

[project.urls]
"Homepage" = "https://github.com/cody-mar10/fasta-tools"
"Bug Tracker" = "https://github.com/cody-mar10/fasta-tools/issues"

[tool.ruff]
src = ["src"]
line-length = 90

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # allow unused imports in `__init__.py`

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
